# python-webapp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: test_main.py
